crates/ink/tests/ui/event/fail/multiple_anonymous_args.rs
#[ink::event]
#[ink(anonymous)]
#[ink(anonymous)]
pub struct Event {
    #[ink(topic)]
    pub topic: [u8; 32],
}

fn main() {}