crates/ink/tests/ui/event/fail/multiple_anonymous_args.stderr
error: Only a single `#[ink(anonymous)]` attribute allowed.
 --> tests/ui/event/fail/multiple_anonymous_args.rs:3:1
  |
3 | #[ink(anonymous)]
  | ^

error[E0277]: the trait bound `Event: ink::ink_env::Event` is not satisfied
 --> tests/ui/event/fail/multiple_anonymous_args.rs:2:1
  |
2 | #[ink(anonymous)]
  | ^ the trait `ink::ink_env::Event` is not implemented for `Event`
